# toolkit-cpp

./: README.md  Timer.h
ConfigMan/: ConfigMan.pri  config_man.cpp  config_man.h
DirManager/: dirman.h  dirman.pri  dirman_posix.cpp
IniProcessor/: IniProcessor.pri
SOCI/: CMakeLists.txt
SOCI/scripts/: build.bat
Utils/: CMakeLists.txt  FileMonitor.cpp  FileMonitor.h  elapsed_timer.cpp  fast_memcpy.cpp  fast_memcpy.h  files.cpp  files.h  filesystem17.h  jsonfile_watcher.h  mstrings.cpp  mstrings.h  stdDequeExt.h  time_convert.h  utils.pri
beast_http/: THttpClientSync.h
beast_websocket/: TWebSocketClientAsync.h  TWebSocketClientSync.h  TWebSocketServerSync.h
boost_tcp/: TTcpClientSync.h  TTcpServerAsync.h  chat_message.h
comport_manager/: TComPortManager.cpp  TComPortManager.h
configmgr/: CMakeLists.txt  configmgr.pri
configmgr/include/: ConfigManager.h  ConfigMonitor.h  ConfigValidator.h
configmgr/src/: ConfigManager.cpp  ConfigMonitor.cpp  ConfigValidator.cpp
control_pointer/: u-logs.cpp  u-logs.hpp  u-signals.cpp  u-signals.hpp
easyloggingpp/lib/: MUST_README.txt  easylogging++.h
easyloggingpp/src/: easylogging++.h
fmt/: fmt.pri
http/: TSimpleHttpServer.cpp  TSimpleHttpServer.h  TTemplatePage.cpp  TTemplatePage.h
json/: TBaseJsonWork.h  json.pri
logger_Wolh/: fool_logger.h  logger.h  logger.pri  logger_sets.cpp  logger_sets.h
loggerpp/: CMakeLists.txt  loggerpp.pri
loggerpp/include/: LoggerPP.h
loggerpp/src/: LoggerPP.cpp
message_transport/: CMakeLists.txt
message_transport/dummy_client/: CMakeLists.txt  dummy_client.pri
message_transport/dummy_client/include/: DummyClient.h
message_transport/dummy_client/src/: DummyClient.cpp
message_transport/dummy_server/: CMakeLists.txt  dummy_server.pri
message_transport/dummy_server/include/: DummyServer.h
message_transport/dummy_server/src/: DummyServer.cpp
message_transport/include/: BaseTransportAny.h  BaseTransportClient.h  BaseTransportServer.h
message_transport/pipe/: PipeTransportKit.cpp  PipeTransportKit.h
message_transport/pipe/pipeclient/: CMakeLists.txt  pipeclient.pri
message_transport/pipe/pipeclient/include/: PipeClient.h
message_transport/pipe/pipeclient/src/: PipeClient.cpp
message_transport/pipe/pipeserver/: CMakeLists.txt  pipeserver.pri
message_transport/pipe/pipeserver/include/: PipeServer.h
message_transport/pipe/pipeserver/src/: PipeServer.cpp
message_transport/rabbitmq/: OwnLibEvHandler.cpp  OwnLibEvHandler.h
message_transport/rabbitmq/rmqclient/: CMakeLists.txt  rmqclient.pri
message_transport/rabbitmq/rmqclient/include/: RabbitMQClient.h
message_transport/rabbitmq/rmqclient/src/: RabbitMQClient.cpp
message_transport/rabbitmq/rmqserver/: CMakeLists.txt  rmqserver.pri
message_transport/rabbitmq/rmqserver/include/: RabbitMQServer.h
message_transport/rabbitmq/rmqserver/src/: RabbitMQServer.cpp
message_transport/src/: BaseTransportAny.cpp  BaseTransportClient.cpp  BaseTransportServer.cpp
message_transport/websocket++/client/: CMakeLists.txt  wsclient.pri
message_transport/websocket++/client/include/: WebSocketClient.h
message_transport/websocket++/client/src/: WebSocketClient.cpp
message_transport/websocket++/server/: CMakeLists.txt  wsserver.pri
message_transport/websocket++/server/include/: WebSocketServer.h
message_transport/websocket++/server/src/: WebSocketServer.cpp
old/checklooping-client/: README.md  help.html  u-checkloop-client.cpp  u-checkloop-client.hpp  u-checkloop-data.hpp  u-checkloop-data.pri
old/checklooping-worker/: checkloop-worker.cpp  checkloop-worker.h  checkloop-worker.pri
old/mqueue-client-worker/: mqueue-client-worker.cpp  mqueue-client-worker.h  mqueue-client-worker.pri
watchdog_worker/: IWatchDogClient.h  WatchDogWorker.cpp  WatchDogWorker.h  watchdog-worker.pri
watchdog_worker/modmon_client/: CMakeLists.txt  ModMonClient.cpp  ModMonClient.h  modmon.pri
watchdog_worker/systemd_client/: CMakeLists.txt  SystemdClient.cpp  SystemdClient.h  systemdcli.pri
websocketpp/: websocketpp.pri
work-intervals/: TWorkIntervalsControl.cpp  TWorkIntervalsControl.h
